syntax = "proto3";

package  checkout;

import "payment.proto";

option go_package = "github.com/asmile1559/dyshop/pb/backend/checkout;checkout";

service CheckoutService {
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zip_code = 5;
}

message CheckoutReq {
  uint32 user_id = 1;
  string order_id = 2;
  string firstname = 3;
  string lastname = 4;
  string email = 5;
  Address address = 6;
  payment.CreditCardInfo credit_card = 7;
}

message CheckoutResp {
  string order_id = 1;
  string transaction_id = 2;
}